--- a/Genre_NN/classical_year_model.ipynb
+++ b/Genre_NN/classical_year_model.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -716,694 +716,16 @@
       "634\n",
       "635\n",
       "636\n",
-      "637\n",
-      "638\n",
-      "639\n",
-      "640\n",
-      "641\n",
-      "642\n",
-      "643\n",
-      "644\n",
-      "645\n",
-      "646\n",
-      "647\n",
-      "648\n",
-      "649\n",
-      "650\n",
-      "651\n",
-      "652\n",
-      "653\n",
-      "654\n",
-      "655\n",
-      "656\n",
-      "657\n",
-      "658\n",
-      "659\n",
-      "660\n",
-      "661\n",
-      "662\n",
-      "663\n",
-      "664\n",
-      "665\n",
-      "666\n",
-      "667\n",
-      "668\n",
-      "669\n",
-      "670\n",
-      "671\n",
-      "672\n",
-      "673\n",
-      "674\n",
-      "675\n",
-      "676\n",
-      "677\n",
-      "678\n",
-      "679\n",
-      "680\n",
-      "681\n",
-      "682\n",
-      "683\n",
-      "684\n",
-      "685\n",
-      "686\n",
-      "687\n",
-      "688\n",
-      "689\n",
-      "690\n",
-      "691\n",
-      "692\n",
-      "693\n",
-      "694\n",
-      "695\n",
-      "696\n",
-      "697\n",
-      "698\n",
-      "699\n",
-      "700\n",
-      "701\n",
-      "702\n",
-      "703\n",
-      "704\n",
-      "705\n",
-      "706\n",
-      "707\n",
-      "708\n",
-      "709\n",
-      "710\n",
-      "711\n",
-      "712\n",
-      "713\n",
-      "714\n",
-      "715\n",
-      "716\n",
-      "717\n",
-      "718\n",
-      "719\n",
-      "720\n",
-      "721\n",
-      "722\n",
-      "723\n",
-      "724\n",
-      "725\n",
-      "726\n",
-      "727\n",
-      "728\n",
-      "729\n",
-      "730\n",
-      "731\n",
-      "732\n",
-      "733\n",
-      "734\n",
-      "735\n",
-      "736\n",
-      "737\n",
-      "738\n",
-      "739\n",
-      "740\n",
-      "741\n",
-      "742\n",
-      "743\n",
-      "744\n",
-      "745\n",
-      "746\n",
-      "747\n",
-      "748\n",
-      "749\n",
-      "750\n",
-      "751\n",
-      "752\n",
-      "753\n",
-      "754\n",
-      "755\n",
-      "756\n",
-      "757\n",
-      "758\n",
-      "759\n",
-      "760\n",
-      "761\n",
-      "762\n",
-      "763\n",
-      "764\n",
-      "765\n",
-      "766\n",
-      "767\n",
-      "768\n",
-      "769\n",
-      "770\n",
-      "771\n",
-      "772\n",
-      "773\n",
-      "774\n",
-      "775\n",
-      "776\n",
-      "777\n",
-      "778\n",
-      "779\n",
-      "780\n",
-      "781\n",
-      "782\n",
-      "783\n",
-      "784\n",
-      "785\n",
-      "786\n",
-      "787\n",
-      "788\n",
-      "789\n",
-      "790\n",
-      "791\n",
-      "792\n",
-      "793\n",
-      "794\n",
-      "795\n",
-      "796\n",
-      "797\n",
-      "798\n",
-      "799\n",
-      "800\n",
-      "801\n",
-      "802\n",
-      "803\n",
-      "804\n",
-      "805\n",
-      "806\n",
-      "807\n",
-      "808\n",
-      "809\n",
-      "810\n",
-      "811\n",
-      "812\n",
-      "813\n",
-      "814\n",
-      "815\n",
-      "816\n",
-      "817\n",
-      "818\n",
-      "819\n",
-      "820\n",
-      "821\n",
-      "822\n",
-      "823\n",
-      "824\n",
-      "825\n",
-      "826\n",
-      "827\n",
-      "828\n",
-      "829\n",
-      "830\n",
-      "831\n",
-      "832\n",
-      "833\n",
-      "834\n",
-      "835\n",
-      "836\n",
-      "837\n",
-      "838\n",
-      "839\n",
-      "840\n",
-      "841\n",
-      "842\n",
-      "843\n",
-      "844\n",
-      "845\n",
-      "846\n",
-      "847\n",
-      "848\n",
-      "849\n",
-      "850\n",
-      "851\n",
-      "852\n",
-      "853\n",
-      "854\n",
-      "855\n",
-      "856\n",
-      "857\n",
-      "858\n",
-      "859\n",
-      "860\n",
-      "861\n",
-      "862\n",
-      "863\n",
-      "864\n",
-      "865\n",
-      "866\n",
-      "867\n",
-      "868\n",
-      "869\n",
-      "870\n",
-      "871\n",
-      "872\n",
-      "873\n",
-      "874\n",
-      "875\n",
-      "876\n",
-      "877\n",
-      "878\n",
-      "879\n",
-      "880\n",
-      "881\n",
-      "882\n",
-      "883\n",
-      "884\n",
-      "885\n",
-      "886\n",
-      "887\n",
-      "888\n",
-      "889\n",
-      "890\n",
-      "891\n",
-      "892\n",
-      "893\n",
-      "894\n",
-      "895\n",
-      "896\n",
-      "897\n",
-      "898\n",
-      "899\n",
-      "900\n",
-      "901\n",
-      "902\n",
-      "903\n",
-      "904\n",
-      "905\n",
-      "906\n",
-      "907\n",
-      "908\n",
-      "909\n",
-      "910\n",
-      "911\n",
-      "912\n",
-      "913\n",
-      "914\n",
-      "915\n",
-      "916\n",
-      "917\n",
-      "918\n",
-      "919\n",
-      "920\n",
-      "921\n",
-      "922\n",
-      "923\n",
-      "924\n",
-      "925\n",
-      "926\n",
-      "927\n",
-      "928\n",
-      "929\n",
-      "930\n",
-      "931\n",
-      "932\n",
-      "933\n",
-      "934\n",
-      "935\n",
-      "936\n",
-      "937\n",
-      "938\n",
-      "939\n",
-      "940\n",
-      "941\n",
-      "942\n",
-      "943\n",
-      "944\n",
-      "945\n",
-      "946\n",
-      "947\n",
-      "948\n",
-      "949\n",
-      "950\n",
-      "951\n",
-      "952\n",
-      "953\n",
-      "954\n",
-      "955\n",
-      "956\n",
-      "957\n",
-      "958\n",
-      "959\n",
-      "960\n",
-      "961\n",
-      "962\n",
-      "963\n",
-      "964\n",
-      "965\n",
-      "966\n",
-      "967\n",
-      "968\n",
-      "969\n",
-      "970\n",
-      "971\n",
-      "972\n",
-      "973\n",
-      "974\n",
-      "975\n",
-      "976\n",
-      "977\n",
-      "978\n",
-      "979\n",
-      "980\n",
-      "981\n",
-      "982\n",
-      "983\n",
-      "984\n",
-      "985\n",
-      "986\n",
-      "987\n",
-      "988\n",
-      "989\n",
-      "990\n",
-      "991\n",
-      "992\n",
-      "993\n",
-      "994\n",
-      "995\n",
-      "996\n",
-      "997\n",
-      "998\n",
-      "999\n",
-      "1000\n",
-      "1001\n",
-      "1002\n",
-      "1003\n",
-      "1004\n",
-      "1005\n",
-      "1006\n",
-      "1007\n",
-      "1008\n",
-      "1009\n",
-      "1010\n",
-      "1011\n",
-      "1012\n",
-      "1013\n",
-      "1014\n",
-      "1015\n",
-      "1016\n",
-      "1017\n",
-      "1018\n",
-      "1019\n",
-      "1020\n",
-      "1021\n",
-      "1022\n",
-      "1023\n",
-      "1024\n",
-      "1025\n",
-      "1026\n",
-      "1027\n",
-      "1028\n",
-      "1029\n",
-      "1030\n",
-      "1031\n",
-      "1032\n",
-      "1033\n",
-      "1034\n",
-      "1035\n",
-      "1036\n",
-      "1037\n",
-      "1038\n",
-      "1039\n",
-      "1040\n",
-      "1041\n",
-      "1042\n",
-      "1043\n",
-      "1044\n",
-      "1045\n",
-      "1046\n",
-      "1047\n",
-      "1048\n",
-      "1049\n",
-      "1050\n",
-      "1051\n",
-      "1052\n",
-      "1053\n",
-      "1054\n",
-      "1055\n",
-      "1056\n",
-      "1057\n",
-      "1058\n",
-      "1059\n",
-      "1060\n",
-      "1061\n",
-      "1062\n",
-      "1063\n",
-      "1064\n",
-      "1065\n",
-      "1066\n",
-      "1067\n",
-      "1068\n",
-      "1069\n",
-      "1070\n",
-      "1071\n",
-      "1072\n",
-      "1073\n",
-      "1074\n",
-      "1075\n",
-      "1076\n",
-      "1077\n",
-      "1078\n",
-      "1079\n",
-      "1080\n",
-      "1081\n",
-      "1082\n",
-      "1083\n",
-      "1084\n",
-      "1085\n",
-      "1086\n",
-      "1087\n",
-      "1088\n",
-      "1089\n",
-      "1090\n",
-      "1091\n",
-      "1092\n",
-      "1093\n",
-      "1094\n",
-      "1095\n",
-      "1096\n",
-      "1097\n",
-      "1098\n",
-      "1099\n",
-      "1100\n",
-      "1101\n",
-      "1102\n",
-      "1103\n",
-      "1104\n",
-      "1105\n",
-      "1106\n",
-      "1107\n",
-      "1108\n",
-      "1109\n",
-      "1110\n",
-      "1111\n",
-      "1112\n",
-      "1113\n",
-      "1114\n",
-      "1115\n",
-      "1116\n",
-      "1117\n",
-      "1118\n",
-      "1119\n",
-      "1120\n",
-      "1121\n",
-      "1122\n",
-      "1123\n",
-      "1124\n",
-      "1125\n",
-      "1126\n",
-      "1127\n",
-      "1128\n",
-      "1129\n",
-      "1130\n",
-      "1131\n",
-      "1132\n",
-      "1133\n",
-      "1134\n",
-      "1135\n",
-      "1136\n",
-      "1137\n",
-      "1138\n",
-      "1139\n",
-      "1140\n",
-      "1141\n",
-      "1142\n",
-      "1143\n",
-      "1144\n",
-      "1145\n",
-      "1146\n",
-      "1147\n",
-      "1148\n",
-      "1149\n",
-      "1150\n",
-      "1151\n",
-      "1152\n",
-      "1153\n",
-      "1154\n",
-      "1155\n",
-      "1156\n",
-      "1157\n",
-      "1158\n",
-      "1159\n",
-      "1160\n",
-      "1161\n",
-      "1162\n",
-      "1163\n",
-      "1164\n",
-      "1165\n",
-      "1166\n",
-      "1167\n",
-      "1168\n",
-      "1169\n",
-      "1170\n",
-      "1171\n",
-      "1172\n",
-      "1173\n",
-      "1174\n",
-      "1175\n",
-      "1176\n",
-      "1177\n",
-      "1178\n",
-      "1179\n",
-      "1180\n",
-      "1181\n",
-      "1182\n",
-      "1183\n",
-      "1184\n",
-      "1185\n",
-      "1186\n",
-      "1187\n",
-      "1188\n",
-      "1189\n",
-      "1190\n",
-      "1191\n",
-      "1192\n",
-      "1193\n",
-      "1194\n",
-      "1195\n",
-      "1196\n",
-      "1197\n",
-      "1198\n",
-      "1199\n",
-      "1200\n",
-      "1201\n",
-      "1202\n",
-      "1203\n",
-      "1204\n",
-      "1205\n",
-      "1206\n",
-      "1207\n",
-      "1208\n",
-      "1209\n",
-      "1210\n",
-      "1211\n",
-      "1212\n",
-      "1213\n",
-      "1214\n",
-      "1215\n",
-      "1216\n",
-      "1217\n",
-      "1218\n",
-      "1219\n",
-      "1220\n",
-      "1221\n",
-      "1222\n",
-      "1223\n",
-      "1224\n",
-      "1225\n",
-      "1226\n",
-      "1227\n",
-      "1228\n",
-      "1229\n",
-      "1230\n",
-      "1231\n",
-      "1232\n",
-      "1233\n",
-      "1234\n",
-      "1235\n",
-      "1236\n",
-      "1237\n",
-      "1238\n",
-      "1239\n",
-      "1240\n",
-      "1241\n",
-      "1242\n",
-      "1243\n",
-      "1244\n",
-      "1245\n",
-      "1246\n",
-      "1247\n",
-      "1248\n",
-      "1249\n",
-      "1250\n",
-      "1251\n",
-      "1252\n",
-      "1253\n",
-      "1254\n",
-      "1255\n",
-      "1256\n",
-      "1257\n",
-      "1258\n",
-      "1259\n",
-      "1260\n",
-      "1261\n",
-      "1262\n",
-      "1263\n",
-      "1264\n",
-      "1265\n",
-      "1266\n",
-      "1267\n",
-      "1268\n",
-      "1269\n",
-      "1270\n",
-      "1271\n",
-      "1272\n",
-      "1273\n",
-      "1274\n",
-      "1275\n",
-      "                                            midi_obj    year\n",
-      "0  <pretty_midi.pretty_midi.PrettyMIDI object at ...  1910.0\n",
-      "1  <pretty_midi.pretty_midi.PrettyMIDI object at ...  1910.0\n",
-      "2  <pretty_midi.pretty_midi.PrettyMIDI object at ...  1910.0\n",
-      "3  <pretty_midi.pretty_midi.PrettyMIDI object at ...  1893.0\n",
-      "4  <pretty_midi.pretty_midi.PrettyMIDI object at ...  1893.0\n"
+      "637\n"
      ]
     }
    ],
    "source": [
-    "# Zelin's code will create a list of .wav filepaths and years of composition\n",
-    "# temporarily name these wavs and years\n",
     "import pickle\n",
     "import pretty_midi as pm\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "# from basic_pitch.inference import predict as bp_predict\n",
-    "# from basic_pitch import ICASSP_2022_MODEL_PATH\n",
-    "# BASIC_PITCH_MODEL = tf.saved_model.load(str(ICASSP_2022_MODEL_PATH))\n",
-    "\n",
-    "# Parameters\n",
-    "STD_ONSET = 0.3\n",
-    "STD_FRAME = 0.2\n",
-    "STD_MIN_NOTE_LEN = 50\n",
-    "STD_MIN_FREQ = None\n",
-    "STD_MAX_FREQ = 3000\n",
-    "\n",
-    "# def predict(filestr):\n",
-    "#     \"\"\"\n",
-    "#     Makes a Basic Pitch prediction with the global parameters above given an input audio file.\n",
-    "    \n",
-    "#     Parameters:\n",
-    "#         filestr (str): The path to the input audio file.\n",
-    "        \n",
-    "#     Returns:\n",
-    "#         PrettyMIDI object containing predicted MIDI notes.\n",
-    "#     \"\"\"\n",
-    "#     # Run prediction\n",
-    "#     model_output, midi_data, note_events = bp_predict(\n",
-    "#         filestr,\n",
-    "#         BASIC_PITCH_MODEL,\n",
-    "#         STD_ONSET,\n",
-    "#         STD_FRAME,\n",
-    "#         STD_MIN_NOTE_LEN,\n",
-    "#         STD_MIN_FREQ,\n",
-    "#         STD_MAX_FREQ\n",
-    "#     ) # midi_data is the PrettyMIDI object corresponding to the prediction\n",
-    "#     return midi_data\n",
     "\n",
     "def get_matched_midi(wavs, years):\n",
     "    \"\"\"\n",
@@ -1441,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1449,20 +771,7 @@
     "id": "7rEgO2gY9poS",
     "outputId": "e19acb69-5bfe-4379-ac2d-b15f61da3bdb"
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../matched_midi_classical.pkl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpickle\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[39m# If saved, load matched_midi_df from the saved pickle file\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39;49m(\u001b[39m'\u001b[39;49m\u001b[39m../matched_midi_classical.pkl\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m'\u001b[39;49m) \u001b[39mas\u001b[39;00m f:\n\u001b[0;32m      5\u001b[0m     matched_midi_df \u001b[39m=\u001b[39m pickle\u001b[39m.\u001b[39mload(f)\n",
-      "File \u001b[1;32mc:\\Users\\jkamp\\miniconda3\\envs\\mus2vid\\lib\\site-packages\\IPython\\core\\interactiveshell.py:284\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    277\u001b[0m \u001b[39mif\u001b[39;00m file \u001b[39min\u001b[39;00m {\u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m}:\n\u001b[0;32m    278\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    279\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mIPython won\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt let you open fd=\u001b[39m\u001b[39m{\u001b[39;00mfile\u001b[39m}\u001b[39;00m\u001b[39m by default \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    280\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    281\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39myou can use builtins\u001b[39m\u001b[39m'\u001b[39m\u001b[39m open.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    282\u001b[0m     )\n\u001b[1;32m--> 284\u001b[0m \u001b[39mreturn\u001b[39;00m io_open(file, \u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../matched_midi_classical.pkl'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
@@ -2857,8 +2166,8 @@
     "    # pitch_class_hist: the sum of the chroma matrix along the pitch axis\n",
     "    pitch_class_hist = np.sum(chroma, axis=1)\n",
     "\n",
-    "    return normalize_features([tempo, num_sig_changes, resolution, ts_1,\n",
-    "                    ts_2, melody_complexity, melody_range] + list(pitch_class_hist)) # + list(melody_contour))\n",
+    "    return [tempo, num_sig_changes, resolution, ts_1,\n",
+    "                    ts_2, melody_complexity, melody_range] + list(pitch_class_hist) # + list(melody_contour))\n",
     "\n",
     "def extract_midi_features(midi_df):\n",
     "    \"\"\"\n",
